--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -16,18 +16,40 @@
   margin: 20px;
 }
 
-/* Header.css */
 .menu {
   position: absolute;
   top: 0;
   right: 0;
-  width: 250px; /* Breite des Menüs */
+  width: 50%;
   height: 100%;
-  background-color: #9d2323; /* Hintergrundfarbe des Menüs */
+  background: linear-gradient(180deg, rgb(51, 123, 200), rgb(23, 40, 106));
   transition: transform 0.3s ease-in-out; /* Übergangseffekt */
   transform: translateX(100%); /* Menü außerhalb des Sichtbereichs */
 }
 
 .header-container.menu-open .menu {
   transform: translateX(0); /* Menü einblenden */
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+li {
+  margin: 10px 0;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.admin-login-container {
+  margin-top: 20px;
 }
