Add Header to Login for navigation feature-style header logo img

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,11 +5,11 @@
   margin-top: 20px;
 }
 
-/* .header-logo img {
+.header-logo img {
   height: 70px;
   margin-left: 20px;
   border-radius: 5px;
-} */
+}
 
 .fa-bars,
 .close-menu-btn {
