--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,5 @@
 .header-container {
+  /* position: absolute; */
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -91,12 +92,17 @@ a {
 }
 
 /* Responsive Styles */
-@media (min-width: 768px) {
+
+@media (min-width: 1100px) {
   .header-container {
     /* margin-top: 20px; */
-    width: 90vw;
+    position: fixed;
+    width: 100vw;
     display: flex;
     justify-content: space-between;
+    z-index: 100;
+    top: 0;
+    left: 0;
   }
   .navbar {
     display: flex;
@@ -110,10 +116,17 @@ a {
     display: flex;
     flex-direction: row;
 
-    margin-right: 10%;
+    margin-left: 50px;
+    margin-right: 100px;
   }
   .navbar li {
     margin: 0 10px;
+  }
+
+  .navbar div {
+    display: flex;
+    flex-direction: column;
+    margin-right: 30px;
   }
   .burger-menu {
     display: none;
