--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,7 @@
+* {
+  /* font-size: 62.5%; */
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   display: flex;
@@ -6,5 +10,5 @@ body {
   min-height: 100vh;
   background-color: black;
   color: rgb(230, 212, 212);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
