--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,11 @@ body {
   justify-content: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: black;
+  /* background-color: black; */
+  background-image: url(../assets/sep09.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   color: rgb(230, 212, 212);
   font-family: 'Roboto', sans-serif;
 }
