--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,5 +10,5 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   color: rgb(230, 212, 212);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
