--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,7 @@ body {
   /* background-color: black; */
   background-image: url(../assets/sep09.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center;
   color: rgb(230, 212, 212);
   font-family: 'Roboto', sans-serif;
