--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,10 +1,17 @@
+/* .contact-container {
+ 
+} */
 .contact-container {
+  display: flex;
+
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-}
+  /* justify-content: center; */
 
+  margin-top: 5rem;
+}
 .contact-container p {
   margin: 10px;
 }
