--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,11 +1,20 @@
+.dashboard-container {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 div h1,
 h2,
 h3 {
   color: #ffffff;
   font-weight: bold;
   font-size: 1.5em;
-  margin: 0 auto;
-  padding: 5%;
+  /* margin: 0 auto; */
+  /* padding: 5%; */
 }
 
 div h1 {
