--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -97,14 +97,14 @@ a {
 
 @media (min-width: 1100px) {
   .header-container {
-    /* margin-top: 20px; */
     position: fixed;
     width: 100vw;
     display: flex;
     justify-content: space-between;
     z-index: 100;
-    top: 0;
+    top: 20px;
     left: 0;
+    padding-bottom: 60px;
   }
   .navbar {
     display: flex;
