--- a/src/styles/Jobs.css
+++ b/src/styles/Jobs.css
@@ -1,11 +1,12 @@
 .jobs-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 4rem;
 }
 
 .jobs-container p {
-    margin: 10px;
+  margin: 10px;
 }
