--- a/src/styles/News.css
+++ b/src/styles/News.css
@@ -1,11 +1,12 @@
 .news-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* height: 80vh; */
+  margin-top: 4rem;
 }
 
 .news-container p {
-    margin: 10px;
+  margin: 10px;
 }
