--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -4,7 +4,7 @@
 .contact-container {
   display: flex;
 
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
