--- a/src/styles/Jobs.css
+++ b/src/styles/Jobs.css
@@ -10,3 +10,12 @@
 .jobs-container p {
   margin: 10px;
 }
+
+@media (min-width: 1100px) {
+  .jobs-container {
+    margin-top: 6rem;
+  }
+  .jobs-container p {
+    margin: 20px;
+  }
+}
