--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,5 @@
 .header-container {
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -38,18 +38,16 @@
   top: 0;
   right: 0;
   width: 50%;
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(180deg, rgb(51, 123, 200), rgb(23, 40, 106));
-  /* transform: translateX(100%);
-  opacity: 0;
-  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out; */
+  transition: transform 0.3s ease-in-out; /* Übergangseffekt */
+  transform: translateX(100%); /* Menü außerhalb des Sichtbereichs */
   z-index: 99;
-  visibility: hidden; /* visibility hidden to ensure it's not interactive */
+  visibility: hidden;
 }
 
 .header-container.menu-open .menu {
-  transform: translateX(0);
-  opacity: 1;
+  transform: translateX(0); /* Menü einblenden */
   visibility: visible;
 }
 
@@ -97,37 +95,31 @@ a {
 }
 
 /* Responsive Styles */
-@media (min-width: 1100px) {
+@media (min-width: 768px) {
   .header-container {
-    position: fixed;
     width: 100vw;
     display: flex;
     justify-content: space-between;
-    z-index: 100;
-    top: 20px;
-    left: 0;
-    padding-bottom: 60px;
+    align-items: center;
+    margin-top: 20px;
   }
   .navbar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
+    /* width: 100%; */
+    margin-right: 20px;
   }
   .navbar ul {
     display: flex;
     flex-direction: row;
-    margin-left: 50px;
-    margin-right: 100px;
+    text-align: left;
+    width: 100%;
+    margin-right: 30px;
   }
   .navbar li {
     margin: 0 10px;
-  }
-
-  .navbar div {
-    display: flex;
-    flex-direction: column;
-    margin-right: 30px;
   }
   .burger-menu {
     display: none;
