--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,4 +15,5 @@ body {
   background-position: center;
   color: rgb(230, 212, 212);
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
