--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
   /* background-color: black; */
   background-image: url(../assets/sep09.jpg);
