Edit Responsive Desing for Header--Add Home path for Logo--add old logo from Tablet view to Desktop---Add Box-shadow for Header-Add padding for all main Components

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,6 +3,7 @@
 } */
 .contact-container {
   display: flex;
+  padding-top: 10vh; /* Fügt einen oberen Abstand hinzu, der der Höhe des Headers entspricht */
 
   height: 100vh;
   display: flex;
