--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -1,3 +1,10 @@
+.welcome-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-top: 10vh;
+}
+
 .small-welcome-container {
   display: flex;
   justify-content: center;
@@ -7,12 +14,6 @@
 
 small {
   font-size: 1.2rem;
-}
-
-.welcome-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
 
 .welcome-text {
