Add box-shadow to Header and make hover effect

--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -8,7 +8,17 @@
   justify-content: center;
   align-items: center;
 }
-
+.deleteBtn {
+  background-color: #ff0000;
+  color: #ffffff;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  margin: 0 5px;
+  width: 8rem;
+}
 div h1,
 h2,
 h3 {
