--- a/src/styles/News.css
+++ b/src/styles/News.css
@@ -1,14 +1,64 @@
 .news-container {
-  padding-top: 10vh; /* Fügt einen oberen Abstand hinzu, der der Höhe des Headers entspricht */
+  padding-top: 10vh;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   /* height: 80vh; */
-  margin-top: 4rem;
+  /* margin-top: 4rem; */
 }
 
 .news-container p {
   margin: 10px;
+}
+
+.news-banner-container {
+  background-color: rgba(128, 128, 128, 0.5);
+  min-width: 320px;
+  max-width: 100%;
+  border: none;
+  border-radius: 15px;
+  margin: 20px;
+  padding: 6px;
+  box-sizing: border-box;
+  display: flex;
+
+  box-shadow: 0 0 20px rgba(128, 128, 128, 0.8);
+}
+.news-banner {
+  min-width: 300px;
+  max-width: 100%;
+  height: 30vh;
+  object-fit: contain;
+  margin: 10px 10px 10px 10px;
+  border: none;
+  border-radius: 15px;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 10px;
+
+  text-shadow: #00eaff 0px 0px 30px;
+}
+.news-ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+}
+.news-li {
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(128, 128, 128, 0.8);
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
