--- a/src/styles/Jobs.css
+++ b/src/styles/Jobs.css
@@ -1,16 +1,30 @@
 .jobs-container {
-  padding-top: 10vh; /* Fügt einen oberen Abstand hinzu, der der Höhe des Headers entspricht */
+  padding-top: 10vh;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  margin-top: 4rem;
+  /* height: 80vh; */
+  /* margin-top: 4rem; */
 }
 
 .jobs-container p {
   margin: 10px;
+}
+
+.jobs-banner-container {
+  background-color: rgba(128, 128, 128, 0.4);
+  min-width: 340px;
+  max-width: 100%;
+  border: none;
+  border-radius: 15px;
+  margin: 20px;
+  padding: 6px;
+  box-sizing: border-box;
+  display: flex;
+
+  box-shadow: 0 0 20px rgba(128, 128, 128, 0.8);
 }
 
 @media (min-width: 1100px) {
