--- a/src/styles/News.css
+++ b/src/styles/News.css
@@ -14,8 +14,8 @@
 }
 
 .news-banner-container {
-  background-color: rgba(128, 128, 128, 0.5);
-  min-width: 320px;
+  background-color: rgba(128, 128, 128, 0.4);
+  min-width: 340px;
   max-width: 100%;
   border: none;
   border-radius: 15px;
@@ -30,7 +30,7 @@
   min-width: 300px;
   max-width: 100%;
   height: 30vh;
-  object-fit: contain;
+  object-fit: cover;
   margin: 10px 10px 10px 10px;
   border: none;
   border-radius: 15px;
@@ -41,7 +41,7 @@ h1 {
   font-weight: 700;
   margin: 10px;
 
-  text-shadow: #00eaff 0px 0px 30px;
+  text-shadow: #00eaffb3 0px 0px 30px;
 }
 .news-ul {
   display: flex;
@@ -49,16 +49,27 @@ h1 {
   align-items: center;
   justify-content: center;
   margin: 10px;
+  padding: 10px;
 }
 .news-li {
   margin: 10px;
   padding: 10px;
-  border: 1px solid black;
+  border: 1px solid rgb(39, 59, 82);
   border-radius: 15px;
+  background-color: rgba(37, 37, 37, 0.8);
   box-shadow: 0 0 20px rgba(128, 128, 128, 0.8);
   width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.news-li h2 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  margin: 10px;
+}
+
+.news-li p {
+  margin: 40px;
 }
