--- a/src/styles/Jobs.css
+++ b/src/styles/Jobs.css
@@ -16,6 +16,8 @@
 .jobs-banner-container {
   background-color: rgba(128, 128, 128, 0.4);
   min-width: 340px;
+  min-height: 200px;
+
   max-width: 100%;
   border: none;
   border-radius: 15px;
@@ -25,6 +27,54 @@
   display: flex;
 
   box-shadow: 0 0 20px rgba(128, 128, 128, 0.8);
+}
+.jobs-banner {
+  min-width: 300px;
+  max-width: 100%;
+  height: 30vh;
+  object-fit: cover;
+  margin: 10px 10px 10px 10px;
+  border: none;
+  border-radius: 15px;
+}
+
+.jobs-container h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 10px;
+
+  text-shadow: #00eaffb3 0px 0px 30px;
+}
+
+.jobs-ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  padding: 10px;
+}
+.jobs-li {
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid rgb(39, 59, 82);
+  border-radius: 15px;
+  background-color: rgba(37, 37, 37, 0.8);
+  box-shadow: 0 0 20px rgba(128, 128, 128, 0.8);
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.jobs-li h2 {
+  padding-bottom: 1rem;
+  font-size: 1.8rem;
+  font-weight: 700;
+  margin: 10px;
+}
+.jobs-li p {
+  margin: 40px;
 }
 
 @media (min-width: 1100px) {
