--- a/src/styles/News.css
+++ b/src/styles/News.css
@@ -53,7 +53,7 @@
 }
 .news-li {
   margin: 10px;
-  padding: 10px;
+  padding: 15px;
   border: 1px solid rgb(39, 59, 82);
   border-radius: 15px;
   background-color: rgba(37, 37, 37, 0.8);
@@ -65,12 +65,17 @@
   justify-content: center;
 }
 .news-li h2 {
-  padding-bottom: 1rem;
+  padding: 1rem;
   font-size: 1.8rem;
   font-weight: 700;
   margin: 10px;
+  background-color: rgba(128, 128, 128, 0.4);
+  border-radius: 10px;
 }
 
 .news-li p {
-  margin: 40px;
+  margin: 10px;
+  background-color: rgba(128, 128, 128, 0.4);
+  padding: 0.7rem;
+  border-radius: 10px;
 }
