--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -67,6 +67,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  border-bottom: #ffffff 2px solid;
+}
+.menu-header button {
+  font-size: 30px;
+  margin: 10px;
+  padding: 5px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  color: white;
 }
 
 .languages-container {
