--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,9 +3,9 @@
 } */
 .contact-container {
   display: flex;
-  padding-top: 10vh; /* Fügt einen oberen Abstand hinzu, der der Höhe des Headers entspricht */
+  padding-top: 10vh;
 
-  height: 100vh;
+  height: 82vh;
   display: flex;
   flex-direction: column;
   align-items: center;
